[package]
name = "parse-sql-statements-wasm"
version = "0.1.2"
authors = ["Fwio <624835339@qq.com>"]
description = "A wrapper of sqlparser, exposing the `parse_statements` method only."
repository = "https://github.com/3fuyang/parse-sql-statements-wasm"
license = "MIT/Apache-2.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde_json = "1.0.93"
sqlparser = { version = "0.31.0", features = ["serde"] }
wasm-bindgen = "0.2.84"
